--- a/client/src/index.html
+++ b/client/src/index.html
@@ -5,7 +5,7 @@
     <title>Cozy DB</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
     <link rel="stylesheet" href="https://unpkg.com/lucide-static@latest/font/lucide.css" />
   </head>
