feat: Add preconnect and preload links for improved performance in index.html

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -6,6 +6,10 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="preconnect" href="https://rsms.me" />
+    <link rel="preconnect" href="https://unpkg.com" />
+    <link rel="preload" href="https://rsms.me/inter/inter.css" as="style" />
+    <link rel="preload" href="https://unpkg.com/lucide-static@latest/font/lucide.css" as="style" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
     <link rel="stylesheet" href="https://unpkg.com/lucide-static@latest/font/lucide.css" />
   </head>
